k8s/environment/overlays/staging-tenant/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prister-staging
  labels:
    goldilocks.fairwinds.com/enabled: "true"
