k8s/environment/overlays/staging-tenant/admin.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
spec:
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: admin
          image: nova-admin
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - port: 3000
      targetPort: 3000
      name: admin
    - port: 3001
      targetPort: 3000
      name: admin-http
