k8s/environment/overlays/staging-tenant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    labels:
        name: ingress-service
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 1G
        cert-manager.io/cluster-issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/proxy-connect-timeout: 10
        nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
        nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
        nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: 3600
        # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    defaultBackend:
        service:
            name: frontend-svc
            port:
                number: 3000
    rules:
        - host: prister.staging.novalearn.org
          http:
              paths:
                  - path: "/"
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-svc
                            port:
                                number: 3000
        - host: admin.staging.novalearn.org
          http:
              paths:
                  - path: "/"
                    pathType: Prefix
                    backend:
                        service:
                            name: admin-svc
                            port:
                                number: 3000

    tls:
        - hosts:
              - admin.staging.novalearn.org
              - prister.staging.novalearn.org
          secretName: novalearn-staging-tls
